# benchFFT

./: .gitignore  Makefile  Makefile.am  Makefile.in  aclocal.m4  acx_f77_cmain_fflags.m4  bootstrap.sh  build.sh  config.h.in  configuration.mk  configure  configure.ac  extensions.mk  init.sh  plot.sh  ps_to_png.sh  run_accuracy.sh  run_speed.sh
benchees/: Makefile.am  Makefile.common  Makefile.in
benchees/acml/: Makefile.in
benchees/arprec/: Makefile.in
benchees/bloodworth/: Makefile.in
benchees/burrus/: Makefile.in
benchees/cross/: Makefile.in
benchees/cwplib/: Makefile.in
benchees/dfftpack/: Makefile.in
benchees/dsp/: Makefile.in
benchees/dxml/: Makefile.in
benchees/emayer/: Makefile.in
benchees/esrfft/: Makefile.in
benchees/essl/: Makefile.in
benchees/ffte/: Makefile.in  zfft1d.f  zfft2d.f  zfft3d.f
benchees/fftpack/: Makefile.in
benchees/fftreal/: FFTReal.h  Makefile.in
benchees/fftw2/: Makefile.in
benchees/fftw3/: Makefile.in  doit.c  doitr.c
benchees/fxt/: Makefile.in
benchees/glassman/: Makefile.in  glassman-fft-patched.f
benchees/goedecker/: Makefile.in
benchees/gpfa/: Makefile.in
benchees/green-ffts-2.0/: Makefile.in
benchees/gsl/: Makefile.in
benchees/harm/: Makefile.in
benchees/imsl/: Makefile.in
benchees/intel-ipps/: Makefile.in
benchees/intel-mkl/: Makefile.in
benchees/jmfft/: Makefile.in
benchees/kissfft/: Makefile.am  Makefile.in  doit.c
benchees/krukar/: Makefile.in
benchees/mfft/: Makefile.in
benchees/mixfft/: Makefile.in
benchees/monnier/: Makefile.in
benchees/morris/: Makefile.in
(+95 files in other folders)
